--- a/src/components/TeamMemberProfileImage/TeamMemberProfileImage.scss
+++ b/src/components/TeamMemberProfileImage/TeamMemberProfileImage.scss
@@ -10,8 +10,8 @@
   &__img {
     height: 136px;
     width: 136px;
+    padding: 10px;
     border-radius: 50%;
-    padding-top: 10px;
     object-fit: cover;
   }
 }
