--- a/src/components/BasicImage/BasicImage.scss
+++ b/src/components/BasicImage/BasicImage.scss
@@ -1,18 +1,22 @@
 .basic-image {
-    display: flex;
+    position: relative;
+    overflow: hidden;
+    // Mobile image aspect ratio
+    padding-top: 65.3333333%;
 
-    img {
-        height: 245px;
-        width: 375px;
-        max-width: 100%;
-        object-fit: cover;
-        margin: auto;
-
-        @media screen and (min-width: 768px) {
-            height: 564px;
-            width: 1048px;
-            max-width: 100%;
-            object-fit: cover;
-        }
+    @media screen and (min-width: 768px) {
+        // Desktop image aspect ratio
+        padding-top: 53.8167939%;
     }
+}
+
+img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: auto;
+    margin: auto;
+    max-width: 100%;
 }
