--- a/src/components/PageHeaderNew/PageHeaderNew.scss
+++ b/src/components/PageHeaderNew/PageHeaderNew.scss
@@ -25,7 +25,8 @@
       line-height: 40px;
       font-weight: 700;
       margin: 0;
-
+      width: 50%;
+      
       @media screen and (min-width: 768px) {
          font-size: 48px;
          line-height: 56px;
@@ -42,6 +43,7 @@
       line-height: 24px;
       font-weight: 500;
       margin: 16px 0 0 0;
+      width: 50%;
 
       @media screen and (min-width: 768px) {
          font-size: 24px;
