--- a/src/components/SpotlightCard/SpotlightCard.scss
+++ b/src/components/SpotlightCard/SpotlightCard.scss
@@ -4,12 +4,18 @@
     border: 1px solid #CCCFD0;
     box-shadow: 0px 2px 4px rgba(91, 103, 112, 0.24);
     max-width: 100%;
-    width: 80%; //calc(100% - 40px);
-    margin: 20px 20px 20px 20px;
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
+
+    &-half-width {
+      width: 40%;
+      flex-direction: column;
+    }
   
     @media screen and (max-width: 767px) {
+      width: 100%;
       margin: 0 auto;
       flex-direction: column;
     }
@@ -19,7 +25,7 @@
         width: 250px;
         height: 250px;
         border-radius: 50%;
-        border: 5px solid black;
+        border: 6px dotted #DD0031;
         margin-top: 50px;
 
         background-repeat: no-repeat;
@@ -29,6 +35,7 @@
         @media screen and (max-width: 767px) {
             width: 150px;
             height: 150px;
+            border: 4px dotted #DD0031;
         }
     }
   
@@ -43,6 +50,11 @@
             min-height: 300px;
             float: right;
 
+            &-half-width{
+              width: 100%;
+              text-align: center;
+            }
+            
             @media screen and (max-width: 767px) {
                 width: 100%;
                 min-height: 200px;
@@ -50,72 +62,60 @@
             }
         }
   
-      &-title {
-        font-weight: 700;
-        font-size: 32px;
-        line-height: 16px;
-        margin-top: 50px;
-  
-        &--primaryRed {
-          color: #dd0031;
+        &-title {
+          font-weight: 700;
+          font-size: 32px;
+          line-height: 16px;
+          margin-top: 50px;
+    
+          &--primaryRed {
+            color: #dd0031;
+          }
+      
+          &--secondaryBlue {
+            color: #004f71;
+          }
+
+          @media screen and (max-width: 767px) {
+              font-size: 28px;
+          }
         }
     
-        &--secondaryBlue {
+        h2 {
+          font-weight: 400;
+          font-size: 22px;
+          line-height: 12px;
+          margin-top: 0px;
+
+          @media screen and (max-width: 767px) {
+              font-size: 18px;
+          }
+        }
+      
+        &-p {
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 24px;
+          margin: 30px 50px 0px 0px;
+          
+          &-half-width{
+            margin: 30px 15px 0px 15px;
+          }
+
+          @media screen and (max-width: 767px) {
+              margin: 30px 15px 0px 15px;
+              font-size: 14px;
+          }
+        }
+
+        a {
           color: #004f71;
         }
 
-        @media screen and (max-width: 767px) {
-            font-size: 28px;
+        a:hover {
+          font-weight: bolder;
+          cursor: pointer;
         }
-      }
-    
-      h2 {
-        font-weight: 400;
-        font-size: 22px;
-        line-height: 12px;
-        margin-top: 0px;
-
-        @media screen and (max-width: 767px) {
-            font-size: 18px;
-        }
-      }
-    
-      p {
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 24px;
-        margin: 30px 50px 0px 0px;
-
-        @media screen and (max-width: 767px) {
-            margin: 30px 15px 0px 15px;
-            font-size: 14px;
-        }
-      }
-
-      a {
-        color: #004f71;
-      }
-
-      a:hover {
-        font-weight: bolder;
-        cursor: pointer;
-      }
-  
-      &--center {
-        text-align: center;
-      }
-  
-      &--small-titles {
-        h1 {
-          font-size: 16px;
-          line-height: 32px;
-        }
-  
-        h2 {
-          font-size: 14px;
-          line-height: 145.1%;
-        }
-      }
     }
 
     &__img-container {
@@ -123,6 +123,11 @@
         min-height: 300px;
         float: left;
         text-align: center;
+
+        &-half-width {
+          width: 100%;
+          text-align: center;
+        }
 
         @media screen and (max-width: 767px) {
             width: 100%;
