--- a/src/components/SpotlightCard/SpotlightCardLegacy.scss
+++ b/src/components/SpotlightCard/SpotlightCardLegacy.scss
@@ -4,41 +4,38 @@
     border: 1px solid #CCCFD0;
     box-shadow: 0px 2px 4px rgba(91, 103, 112, 0.24);
     max-width: 100%;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
     &-half-width {
-      @media screen and (min-width: 768px) {
-        width: 40%;
-        flex-direction: column;
-      }
+      width: 40%;
+      flex-direction: column;
     }
   
-    &-regular {
-      @media screen and (min-width: 768px) {
-        width: 80%;
-        flex-direction: row;
-      }
+    @media screen and (max-width: 767px) {
+      width: 100%;
+      margin: 0 auto;
+      flex-direction: column;
     }
   
     img {
         display: inline-block;
-        width: 150px;
-        height: 150px;
+        width: 250px;
+        height: 250px;
         border-radius: 50%;
-        border: 4px dotted #DD0031;
+        border: 6px dotted #DD0031;
         margin-top: 50px;
 
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
   
-        @media screen and (min-width: 768px) {
-            width: 250px;
-            height: 250px;
-            border: 6px dotted #DD0031;
+        @media screen and (max-width: 767px) {
+            width: 150px;
+            height: 150px;
+            border: 4px dotted #DD0031;
         }
     }
   
@@ -49,68 +46,58 @@
       margin-bottom: 50px;
 
         &-container {
-            width: 100%;
-            min-height: 200px;
-            text-align: center;
+            width: 55%;
+            min-height: 300px;
+            float: right;
 
             &-half-width{
-              @media screen and (min-width: 768px) {
+              width: 100%;
+              text-align: center;
+            }
+            
+            @media screen and (max-width: 767px) {
                 width: 100%;
+                min-height: 200px;
                 text-align: center;
-              }
             }
-            
-            &-regular {
-              @media screen and (min-width: 768px) {
-                width: 55%;
-                min-height: 300px;
-                float: right;
-                text-align: left;
-              }
-            }
-            
         }
   
         &-title {
           font-weight: 700;
-          font-size: 28px;
+          font-size: 32px;
           line-height: 16px;
           margin-top: 50px;
           color: #dd0031;
 
-          @media screen and (min-width: 768px) {
-              font-size: 32px;
+          @media screen and (max-width: 767px) {
+              font-size: 28px;
           }
         }
     
         h2 {
           font-weight: 400;
-          font-size: 18px;
+          font-size: 22px;
           line-height: 12px;
           margin-top: 0px;
 
-          @media screen and (min-width: 768px) {
-              font-size: 22px;
+          @media screen and (max-width: 767px) {
+              font-size: 18px;
           }
         }
       
         &-p {
           font-weight: 400;
-          font-size: 14px;
+          font-size: 18px;
           line-height: 24px;
-          margin: 30px 15px 20px 15px;
+          margin: 30px 50px 20px 0px;
           
           &-half-width{
-            @media screen and (min-width: 768px) {
-              margin: 30px 15px 20px 15px;  
-            }
+            margin: 30px 15px 20px 15px;
           }
 
-          &-regular {
-            @media screen and (min-width: 768px) {
-              margin: 30px 50px 20px 0px;
-              font-size: 18px;
-            }
+          @media screen and (max-width: 767px) {
+              margin: 30px 15px 20px 15px;
+              font-size: 14px;
           }
         }
 
@@ -125,23 +112,19 @@
     }
 
     &__img-container {
-        width: 100%;
-        min-height: 200px;
+        width: 45%;
+        min-height: 300px;
         float: left;
         text-align: center;
 
         &-half-width {
-          @media screen and (min-width: 768px) {
-            width: 100%;
-            text-align: center;
-          }
+          width: 100%;
+          text-align: center;
         }
 
-        &-regular {
-          @media screen and (min-width: 768px) {
-            width: 45%;
-            min-height: 300px;
-          }
+        @media screen and (max-width: 767px) {
+            width: 100%;
+            min-height: 200px;
         }
     }
 }
