--- a/src/components/BasicContent/BasicContent.scss
+++ b/src/components/BasicContent/BasicContent.scss
@@ -5,21 +5,32 @@
     font-style: normal;
     padding: 20px 0px 20px 0px;
 
-    &-content-padding {
+    &-content-styling {
         padding: 0px 15px 0px 15px;
+
+        @media screen and (min-width: 768px) {
+            margin-left: 15%;
+            margin-right: 15%;
+        }
     }
 
-    &-cta-button {
-        margin-left: 15px;
+    &-video {
+        padding: 0px 15px 15px 15px;
     }
 
-    &-media {
-        margin-bottom: 15px;
+    &-img {
+        padding: 0px 15px 15px 15px;
+        
+        // @media screen and (min-width: 768px) {
+        //     float: left;
+        //     width: 50%;
+        //     padding: 0;
+        //     margin-right: 30px;
+        // }
     }
 
     h2 {
         color: #dd0031;
-        margin: 0px;
     }
 
     h3 {
@@ -37,4 +48,20 @@
 
 .bg-tan {
     background-color: #F5E3CC66;
+}
+
+.basic-video {
+    width: 100% !important;
+
+    @media screen and (min-width: 768px) {
+        max-width: 100% !important;
+    }
+
+    iframe {
+        width: 100% !important;
+
+        @media screen and (min-width: 768px) {
+            max-width: 100% !important;
+        }
+    }
 }
