--- a/src/components/BasicContent/BasicContent.scss
+++ b/src/components/BasicContent/BasicContent.scss
@@ -4,7 +4,12 @@
     height: max-content;
     font-family: 'Apercu Pro', 'Lato', sans-serif;
     font-style: normal;
-    padding: 20px 0px 20px 0px;
+    padding: 32px 0px 32px 0px;
+
+    @media screen and (min-width: 768px) {
+        max-width: 1048px;
+        padding: 0;
+    }
 
     &-container {
         display: flex;
@@ -18,32 +23,49 @@
 
     &-content {
         @media screen and (min-width: 768px) {
-            float: right;
-            width: 50%;
+            width: 100%;
+            max-width: 632px;
+            margin: 0 auto;
+            padding: 56px 0px 56px 0px;
         }
 
         &-styling {
-            padding: 0px 15px 0px 15px;
+            padding: 0px 16px 0px 16px;
         }
     }
 
     &-video {
-        padding: 0px 15px 15px 15px;
+        padding: 0px 16px 32px 16px;
+
+        @media screen and (min-width: 768px) {
+            padding: 0;
+        }
     }
 
-    &-img {        
+    &-img {  
+        padding: 0px 16px 32px 16px;   
+
         @media screen and (min-width: 768px) {
-            float: left;
-            width: 50%;
+            padding: 0;
         }
+    }
+
+    &-cta {
+        padding-top: 32px;
     }
 
     h2 {
         color: #dd0031;
+        margin: 0;
+        padding-bottom: 16px;
+
     }
 
     h3 {
         color: #3EB1C8;
+        margin: 0;
+        padding-top: 32px;
+        padding-bottom: 8px;
     }
 
     p {
@@ -51,14 +73,14 @@
     }
 
     .basic-video {
-        width: 100% !important;
+        width: 100%;
     
         @media screen and (min-width: 768px) {
             max-width: 100% !important;
         }
     
         iframe {
-            width: 100% !important;
+            width: 100%;
     
             @media screen and (min-width: 768px) {
                 max-width: 100% !important;
@@ -67,10 +89,12 @@
     }
     
     .basic-image {
-        margin: 0px 15px 0px 15px !important;
-    
-        @media screen and (min-width: 768px) {
-            margin: 0px 0px 0px 15px !important;
+        img {
+            @media screen and (min-width: 768px) {
+                // max-height: 100%;
+                // height: 100%;
+                // width: 100%;
+            }
         }
     }
 }
