--- a/src/components/BasicContent/BasicContent.scss
+++ b/src/components/BasicContent/BasicContent.scss
@@ -7,7 +7,6 @@
     padding: 32px 0px 32px 0px;
 
     @media screen and (min-width: 768px) {
-        max-width: 1048px;
         padding: 0;
     }
 
@@ -18,7 +17,6 @@
         @media screen and (min-width: 768px) {
             flex-direction: row;
         }
-
     }
 
     &-content {
@@ -40,13 +38,41 @@
         @media screen and (min-width: 768px) {
             padding: 0;
         }
+
+        .basic-video {
+            width: 100%;
+    
+            @media screen and (min-width: 768px) {
+                max-width: 100% !important;
+            }
+    
+            iframe {
+                width: 100%;
+    
+                @media screen and (min-width: 768px) {
+                    max-width: 100% !important;
+                }
+            }
+        }
     }
 
-    &-img {  
-        padding: 0px 16px 32px 16px;   
+    &__image {
+        padding: 0 0 32px;
 
         @media screen and (min-width: 768px) {
             padding: 0;
+        }
+
+        .basic-image {
+            @media screen and (min-width: 768px) {
+                height: 100%;
+            }
+
+            img {
+                @media screen and (min-width: 768px) {
+                    height: 100%;
+                }
+            }
         }
     }
 
@@ -58,7 +84,6 @@
         color: #dd0031;
         margin: 0;
         padding-bottom: 16px;
-
     }
 
     h3 {
@@ -70,32 +95,6 @@
 
     p {
         color: #5b6770;
-    }
-
-    .basic-video {
-        width: 100%;
-    
-        @media screen and (min-width: 768px) {
-            max-width: 100% !important;
-        }
-    
-        iframe {
-            width: 100%;
-    
-            @media screen and (min-width: 768px) {
-                max-width: 100% !important;
-            }
-        }
-    }
-    
-    .basic-image {
-        img {
-            @media screen and (min-width: 768px) {
-                // max-height: 100%;
-                // height: 100%;
-                // width: 100%;
-            }
-        }
     }
 }
 
